objects/Deleted_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>AccountCAN__c</fullName>
        <label>Customer Account # (CAN)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deleted Contacts</relationshipLabel>
        <relationshipName>Deleted_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Asst.Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Auth_Id__c</fullName>
        <label>Auth Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CACI__c</fullName>
        <description>Siebel Contact Id</description>
        <label>Contact Identifier (CACI)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted_By__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
        <label>Deleted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First Name of Contact</description>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last Name of Contact</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Timezone__c</fullName>
        <label>Primary Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Magadan Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Islands Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korean Standard Time (Asia/Seoul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippine Time (Asia/Manila)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Saigon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time (Asia/Dacca)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Yekaterinburg Time (Asia/Yekaterinburg)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) India Standard Time (Asia/Calcutta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Id__c</fullName>
        <label>Siebel Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>CACI__c</columns>
        <columns>AccountCAN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>